<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:scrollbarStyle="outsideInset"
    tools:context=".ui.classroom.CreateClassActivity">

        <TextView
            android:id="@+id/tvPage"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/buat_kelas_baru"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvKelas"
            style="@style/TextContent.Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/kelas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytKelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvKelas">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etKelas"
                style="@style/TextContent.Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/masukkan_nama_kelas"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvMapel"
            style="@style/TextContent.Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mata_pelajaran"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lytKelas"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytMapel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMapel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMapel"
                style="@style/TextContent.Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/masukkan_nama_mata_pelajaran"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnKonfirmasi"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_signin"
            android:elevation="16dp"
            android:paddingVertical="12dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
